# handler/endpoints.go
@@ -61,15 +61,14 @@ func (s *Server) Register(ctx echo.Context) error {
 	})
 }
 
-func (s *Server) Update(ctx echo.Context) error {
-	var payload generated.UpdatePayload
+func (s *Server) Login(ctx echo.Context) error {
+	var payload generated.LoginPayload
+
 	if err := ctx.Bind(&payload); err != nil {
 		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request body"})
 	}
 
-	// extract JWT to get id
-
-	err := request.ValidateUpdatePayload(&payload)
+	err := request.ValidateLoginPayload(&payload)
 	if err != nil {
 		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": fmt.Sprintf("%s", err.Error())})
 	}
@@ -79,14 +78,58 @@ func (s *Server) Update(ctx echo.Context) error {
 		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Internal Server Error"})
 	}
 
-	if existingUser != nil && existingUser.Id != 6 {
+	if existingUser == nil {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid username or password"})
+	}
+
+	// Check if the provided password matches the hashed password in the database
+	if !request.CheckPasswordHash(payload.Password, existingUser.Password) {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Incorrect Password"})
+	}
+
+	accessToken, err := request.GenerateJWTToken(existingUser.Id, existingUser.FullName)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Internal Server Error"})
+	}
+	return ctx.JSON(http.StatusOK, generated.LoginResponse{
+		AccessToken: accessToken,
+	})
+}
+
+func (s *Server) Update(ctx echo.Context) error {
+	authHeader := ctx.Request().Header.Get("Authorization")
+	// Remove "Bearer " prefix
+	tokenString := authHeader[7:]
+
+	// Validate the access token
+	claims, err := request.ValidateAccessToken(tokenString)
+	if err != nil {
+		return ctx.JSON(http.StatusUnauthorized, map[string]string{"error": "Invalid Token"})
+	}
+
+	var payload generated.UpdatePayload
+	if err := ctx.Bind(&payload); err != nil {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": "Invalid request body"})
+	}
+
+	err = request.ValidateUpdatePayload(&payload)
+	if err != nil {
+		return ctx.JSON(http.StatusBadRequest, map[string]string{"error": fmt.Sprintf("%s", err.Error())})
+	}
+
+	existingUser, err := s.Repository.GetUserByPhoneNumber(ctx.Request().Context(), payload.PhoneNumber)
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Internal Server Error"})
+	}
+
+	if existingUser != nil && existingUser.Id != claims.Id {
 		return ctx.JSON(http.StatusConflict, map[string]string{"error": "phone number already registered"})
 	}
 
 	data, err := s.Repository.UpdateUserById(ctx.Request().Context(), &repository.UpdateUserByIdInput{
 		FullName:    payload.FullName,
 		PhoneNumber: payload.PhoneNumber,
-	}, 6)
+	}, claims.Id)
 
 	var resp generated.UpdateResponse
 	resp.Message = "success update"
@@ -97,9 +140,17 @@ func (s *Server) Update(ctx echo.Context) error {
 }
 
 func (s *Server) Profile(ctx echo.Context) error {
-	// extract JWT
+	authHeader := ctx.Request().Header.Get("Authorization")
+	// Remove "Bearer " prefix
+	tokenString := authHeader[7:]
 
-	existingUser, err := s.Repository.GetUserById(ctx.Request().Context(), 6)
+	// Validate the access token
+	claims, err := request.ValidateAccessToken(tokenString)
+	if err != nil {
+		return ctx.JSON(http.StatusUnauthorized, map[string]string{"error": "Invalid Token"})
+	}
+
+	existingUser, err := s.Repository.GetUserById(ctx.Request().Context(), claims.Id)
 	if err != nil {
 		return ctx.JSON(http.StatusInternalServerError, map[string]string{"error": "Internal Server Error"})
 	}
